tests/fail_compile/derive_ambiguous_types.stderr
error: Types `(i32, i32)` and `i32, i32` are ambiguous. Cannot infer types for both tuple and n-args variants.
 --> tests/fail_compile/derive_ambiguous_types.rs:3:10
  |
3 | #[derive(Propagate)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Propagate` (in Nightly builds, run with -Z macro-backtrace for more info)
